--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="keywords" content="IT系、プログラミング、ポートフォリオ">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
