--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="IT系、プログラミング、ポートフォリオ">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta name="description" content="これまでに制作したWEBアプリケーション、WEBサービスをまとめたサイトです。">
+  <meta name="keywords" content="WEB系、プログラミング、ポートフォリオ">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>KAZUSAN'S Portfolio</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but KAZUSAN'S Portfolio doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
 </body>
 
 </html>
