--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="これまでに制作したWEBアプリケーション、WEBサービスをまとめたサイトです。">
+  <meta name="description" content="これまでに制作したWEBアプリケーション、WEBサービスをまとめたポートフォリオサイトです。個人的に作りたいと思ったアプリケーションも随時追加していきます。">
   <meta name="keywords" content="WEB系、プログラミング、ポートフォリオ">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 
-  <title>KAZUSAN'S Portfolio</title>
+  <title>かずさん工作室</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but KAZUSAN'S Portfolio doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but かずさん工作室 doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
